--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,6 @@
     <string name="app_name">DrugSafe</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
     <string name="my_drugs">My Drugs</string>
     <string name="search_drugs">Search drugs</string>
     <string name="drug_details">Drug details</string>
@@ -14,6 +11,7 @@
     <string name="search_drug_or_substance">Search for drug or substance</string>
     <string name="type_drug_or_substance_first">Type a name or substance to search drugs database</string>
     <string name="find_replacement_drugs">Find replacement drugs</string>
+    <string name="no_drugs_saved">No drugs saved, use search tab to find them</string>
     <string name="save_drug">Save drug</string>
 
     <!-- Fragment tags -->
@@ -30,11 +28,14 @@
     <string name="registration">Registration</string>
     <string name="register">Register</string>
     <string name="signin">Sign in</string>
+    <string name="signout">Sign out</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="repeat_password">Repeat password</string>
     <string name="replacements">Replacements</string>
-
+    <string name="other">Other</string>
+    <string name="settings">Settings</string>
+    <string name="scan_barcode">Scan barcode</string>
     <!-- Success strings -->
     <string name="success_registration">You have registered successfully. You can now log in.</string>
 
@@ -54,7 +55,4 @@
     <string name="error_internal_server_error">An internal server error has occurred. Please try again.</string>
     <string name="error_drug_query_too_short">Please enter at least 3 characters</string>
     <string name="error_no_drugs_found">No drugs found</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
