--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="find_replacement_drugs">Find replacement drugs</string>
     <string name="no_drugs_saved">No drugs saved, use search tab to find them</string>
     <string name="save_drug">Save drug</string>
+    <string name="delete_drug">Delete drug</string>
 
     <!-- Fragment tags -->
     <string name="fragment_tag_mydrugs" translatable="false">MyDrugsFragment</string>
@@ -20,6 +21,7 @@
     <string name="fragment_tag_drugdetails" translatable="false">DrugDetailsFragment</string>
     <string name="fragment_tag_replacementslist" translatable="false">ReplacementListFragment</string>
     <string name="fragment_tag_scanbarcode" translatable="false">BarcodeScannerFragment</string>
+    <string name="fragment_tag_savedrug" translatable="false">SaveDrugFragment</string>
 
     <!-- SharedPreferences Keys -->
     <string name="sp_key_auth_token" translatable="false">auth_token</string>
