--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="delete_drug">Delete drug</string>
     <string name="session_expired">Session expired</string>
     <string name="view_in_browser">View in browser</string>
+    <string name="manual">Manual:</string>
+    <string name="permission_error">Permission error</string>
+    <string name="download_manual">Download manual</string>
+    <string name="download_started_by_drugsafe">Download started by DrugSafe</string>
 
     <!-- Fragment tags -->
     <string name="fragment_tag_mydrugs" translatable="false">MyDrugsFragment</string>
@@ -60,5 +64,6 @@
     <string name="error_no_drugs_found">No drugs found</string>
     <string name="error_ean_not_correct">Scanned code is not assigned to any known drug. Either the barcode is malformed, or drug has been removed from stores.</string>
     <string name="error_session_expired">Your session token has expired. Please, log in again.</string>
-
+    <string name="error_camera_permission_denied">You have denied access to device camera. Without camera permission, this app can\'t begin scan. </string>
+    <string name="error_storage_permission_denied">You have denied access to device storage. Without device permission, this app can\'t download manuals.</string>
 </resources>
